# motion-lab-camera-capture

./: .gitignore  CMakeLists.txt  FindVIS_32.cmake  FindVIS_64.cmake  error.cpp  error.hpp  main.cpp  notes.md
CPP/Include/: GenTL_v1_3.h  PixelFormatConvert.h  PixelFormatConvertTBB.h  VwCL.API.h  VwCL.Global.h  VwCL.h  VwCLCamera.h  VwCXP.Global.h  VwCXP.Msg.h  VwCXP.h  VwCXPBase.h  VwCXPCamera.h  VwCXPGrabberBoard.h  VwCXPPort.h  VwCXPStream.h  VwCamera.h  VwDeviceMaintenanceIntl.h  VwGigE.API.h  VwGigE.Global.h  VwGigE.h  VwImageProcess.API.h  VwImageProcess.h  VwInterface.h  VwSDK.Error.h  VwSDK.h  VwSerial.h  VwUSB.API.h  VwUSB.Global.h  VwUSB.h  VwUSBCamera.h  VwUSBInterface.h
CPP/LIB/x64/: ImageProcess.lib  TLI.V7.lib  TLICL.lib  TLICXP.lib  TLIGigE.lib  TLIUSB.lib  VwCL.lib  VwCXP.V7.lib  VwDeviceMaintenance.lib  VwGigE.V7.lib  VwImageProcess.lib  VwUSB.lib
CPP/LIB/x86/: ImageProcess.lib  TLI.V7.lib  TLICL.lib  TLICXP.lib  TLIGigE.lib  TLIUSB.lib  VwCL.lib  VwCXP.V7.lib  VwDeviceMaintenance.lib  VwGigE.V7.lib  VwImageProcess.lib  VwUSB.lib
toojpeg/: toojpeg.cpp  toojpeg.h
